# listando-project

./: .gitignore  Procfile  manage.py  replit_zip_error_log.txt  requirements.txt  runtime.txt  workshoptdc
listando/: asgi.py  settings.py  urls.py  wsgi.py
listando-project-teste2/: Procfile  pyproject.toml
main/: forms.py  geraPDF.py  models.py  tests.py  urls.py  views.py
main/templates/main/: header.html  index.html  login.html  register.html  sucesso.html
main/tests/: tests_urls.py  tests_views.py
static/: deixarbonito.css
